<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:id="@+id/ll_tasksgroup_item">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:textSize="16sp"
        android:padding="10dp"
        android:drawableLeft="@drawable/baseline_menu_24"
        android:drawablePadding="8dp"/>


</LinearLayout>