...
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_tasksgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
...
