<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="thuyen_services.ImportantActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/btn_back_to_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/arrow_left_black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/taskgroupName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Tên task group"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/task_bg"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

                <ImageView
                    android:id="@+id/btn_check_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:src="@drawable/icon_title"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp"></ImageView>

                <EditText
                    android:id="@+id/tv_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingTop="5dp"
                    android:text="Task title"
                    android:textSize="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:id="@+id/add_myday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/task_bg">

                <ImageView
                    android:id="@+id/icon_myday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/white_sun_icon" />

                <TextView
                    android:id="@+id/text_myday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:text="Thêm vào ngày của tôi"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_important"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/task_bg">

                <ImageView
                    android:id="@+id/important_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/white_star_important" />

                <TextView
                    android:id="@+id/text_important"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:text="Thêm vào quan trọng"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/task_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/clock" />

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:text="Thời gian bắt đầu"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/btn_pick_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/time_picker_icon"
                    tools:layout_editor_absoluteY="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/task_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/clock_time" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:text="Thời gian kết thúc"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/btn_pick_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/time_picker_icon"
                    tools:layout_editor_absoluteY="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/task_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/note_icon_blue" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:text="Ghi chú"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đang sao lưu..."
                android:visibility="gone" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Undo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="\@VNOTE"
            android:textAlignment="center"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:src="@drawable/bin" />
    </LinearLayout>

    <include
        android:id="@+id/layout_delete_confirm"
        layout="@layout/delete_task_confirm_layout"
        android:visibility="gone">

    </include>

</androidx.constraintlayout.widget.ConstraintLayout>