...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

<!--    <ImageButton-->
...
